# Calculator

./: CMakeLists.txt  README.md  main.cpp
CalculatorCompute/: CMakeLists.txt  CalculatorCompute.cpp  CalculatorCompute.hpp
CalculatorSignal/: CMakeLists.txt  CalculatorSignal.cpp  CalculatorSignal.hpp
Resources/: CDS.glade~  calculator.glade
Widgets/: CMakeLists.txt
Widgets/Buttons/: ButtonWidget.cpp  ButtonWidget.hpp
Widgets/Range/: ScrollBar.cpp  ScrollBar.hpp
Window/: CMakeLists.txt  Window.cpp  Window.hpp
